--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^5.3.4",
