--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.0",
     "express": "^4.18.2",
     "history": "^5.3.0",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-calendar": "^4.0.0",
